perubahan my project

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
+          data-bs-target="#myNavbar"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
             <li class="nav-item">
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- hero Section -->
     <section
       id="home"
       class="hero d-flex flex-column-reverse flex-md-row text-center text-md-start container d-md-flex align-items-center"
@@ -174,27 +174,27 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-4">
-            <a href="#">
+            <a href="https://ads-page-plum.vercel.app" target="_blank">
             <div class="card shadow-sm">
-              <img src="img/crud.webp" class="card-img-top" alt="Project 1" />
+              <img src="img/adsLandingPage.webp" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <small class="text-muted">Web Design</small>
-                <h6 class="mt-2">Web Crud sedehana</h6>
+                <h6 class="mt-2">LandingPage web iklan</h6>
               </div>
             </div>
             </a>
           </div>
           <div class="col-md-4 mb-4">
-            <a href="#">
+            <a href="https://password-generator-red-xi.vercel.app/" target="_blank">
             <div class="card shadow-sm">
               <img
-                src="img/e-commerce.webp"
+                src="img/passGenerator.webp"
                 class="card-img-top"
                 alt="Project 2"
               />
               <div class="card-body">
                 <small class="text-muted">Web Design</small>
-                <h6 class="mt-2">Web E-Commerce</h6>
+                <h6 class="mt-2">Web password generator</h6>
               </div>
             </div>
             </a>
